--- a/style.css
+++ b/style.css
@@ -1,85 +1,40 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: Arial, sans-serif; 
-    background-color: #fdfdfd;
+    font-family: Arial, sans-serif;
 }
 
-.main-navbar {
-    background-color: white; 
-    color: black; 
-    padding: 1rem 0; 
-    text-align: center; 
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.center-navbar {
-    display: flex;
-    justify-content: center; 
+#preferences-panel {
+    margin-top: 20px;
 }
 
-.nav-item {
-    font-size: 1.6rem; 
-}
-
-.container-emoji{
+.light-theme {
     background-color: white;
-    padding: 20px; 
-    border-radius: 8px; 
- 
+    color: black;
 }
 
-#grid-emoji {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1rem;
+.dark-theme {
+    background-color: #333;
+    color: white;
 }
 
-.emojiitems {
-    text-align: center;
-    margin: 0.5rem;
-    background-color: white; 
-    padding: 1rem; 
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    flex: 1 0 calc(50% - 1rem); 
-    max-width: calc(50% - 1rem);
-    margin-left: 0.5rem; 
-    margin-right: 0.5rem; 
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out; 
+.colorful-theme {
+    background-color: #0fc85f95;
+    color: #0d47a1;
 }
 
-.emojiitems:hover {
-  transform: scale(1.1); 
-  background-color: #f3f3f3;
+ul.disc {
+    list-style-type: disc;
 }
 
-@media (min-width: 768px) {
-    .emojiitems {
-        flex: 1 0 calc(33.33% - 1rem); 
-        max-width: calc(33.33% - 1rem);
-    }
+ul.circle {
+    list-style-type: circle;
 }
 
-@media (min-width: 1200px) {
-    .emojiitems {
-        flex: 1 0 calc(8.33% - 1rem); 
-        max-width: calc(8.33% - 1rem);
-    }
-}
-
-.emoji {
-    font-size: 3rem;
-}
-
-.emojicode {
-    margin-top: 5px;
-    font-size: 0.8rem;
-    color: #aaa;
-    background-color: azure;
+ul.square {
+    list-style-type: square;
 }
